gcc/testsuite/rust/rustc/ui/issues/issue-42880.rs
type Value = String;

fn main() {
    let f = |&Value::String(_)| (); // { dg-error ".E0599." "" { target *-*-* } }

    let vec: Vec<Value> = Vec::new();
    vec.last().map(f);
}

